trunk/Archive2/2e/f46a5b3b661e3b/output
main.cpp: In function 'int main()':
main.cpp:47:56: error: conversion from 'std::map<std::basic_string<char>, boost::optional<boost::any> >::mapped_type {aka boost::optional<boost::any>}' to non-scalar type 'boost::optional<std::basic_string<char> >' requested
     boost::optional<std::string> blah = rows[0]["value"];
                                                        ^
